Initial styles added

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,17 @@
 
 <body>
 
-Hello!
+
+
+<div class="btn-phantom">.btn-phantom</div>
+<div class="btn-phantom--sm">.btn-phantom--sm</div>
+<div class="tooltip">.tooltip</div>
+<div class="progress-bar"></div>
+<div class="search-box"></div>
+<div class="loader"></div>
+<div class="total-time"></div>
+<div class="left-scroller"></div>
+<div class="scrollbar-x"></div>
     
 <!-- Scripts -->
 <script src="js/scripts.js"></script>
