--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700" rel="stylesheet">
     <link rel="icon" href="img/favicon.png">
     <link rel="canonical" href="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
