Tooltip styles done

--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,7 @@
         </div>
     </div>
 
+    <!-- REFACTOR THIS!!! -->
     <table class="playlist">
         <thead class="playlist__header">
             <tr>
@@ -68,8 +69,9 @@
             </tr>
         </tbody>
     </table>
+    <!-- REFACTOR -->
 
-    <div class="tooltip">.tooltip</div>
+    <div class="tooltip">Copied!</div>
     <div class="progress-bar"><div class="progress-bar__bar"></div></div>
 
     <div class="loader"></div>
