--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="img/favicon.png">
     <link rel="canonical" href="">
